# agenticAI_DocumentParser

./: .env.example  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_server.py
.obsidian/: workspace.json
sample_docs/: contract_sample.txt  invoice_sample.txt  medical_record_sample.txt  receipt_sample.txt  resume_sample.txt
src/: __init__.py  api.py  cli.py  workflow.py
src/agents/: __init__.py  base.py  classifier.py  extractor.py  redactor.py  reporter.py  validator.py
src/core/: __init__.py  bedrock_client.py  config.py
src/schemas/: __init__.py  document.py
src/utils/: __init__.py  document_loader.py  logging.py
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_edge_cases.py  test_schemas.py  test_workflow.py
